# kami

./: .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  README.md  docker-compose.kami.yaml  docker-compose.yaml  package-lock.json  package.json  swagger-spec.json  tsconfig.json
.github/workflows/: build.yaml  docker_build.yaml  docs_build.yaml
docs/: Dockerfile  docker-compose.yml
docs/python-examples/: .env.example  README.md  block_subscription.py  check-hotkey.py  check_hotkey.py  get-keyring-pair-info.py  get-subnet-hyperparameters.py  get-subnet-metagraph.py  get_available_runtime_api.py  get_keyring_pair_info.py  get_latest_block.py  get_subnet_hyperparameters.py  get_subnet_metagraph.py  main.py  pyproject.toml  serve-axons.py  serve_axons.py  set_weights.py
docs/python-examples/kami/: __init__.py  kami.py  types.py
docs/typescript-examples/: get-subnet-metagraph.ts
scripts/: generate-docs.js  generate-docs.ts
src/: app.module.ts  main.ts
src/chain/: chain.controller.ts  chain.service.ts
src/commons/: common-response.dto.ts  common-response.interface.ts  transform.interceptor.ts
src/decorators/: divide-transform.decorator.ts  hex-transform.decorator.ts  index.ts  ip-transform.decorator.ts  unicode-to-string-transform.decorator.ts  utf-to-string-transform.decorator.ts
src/dto/: axon-info.dto.ts  block-info.dto.ts  check-hotkey.dto.ts  identities-info.dto.ts  index.ts  set-weights.dto.ts  subnet-identity.dto.ts  subnet-metagraph.dto.ts
src/mapper/: mapper-service.ts  mapper.module.ts
src/substrate/: substrate.exceptions.ts  (+4 more)
(+145 files in other folders)
