[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kami"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "bittensor-commit-reveal>=0.4.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
]

[tool.setuptools]
packages = ["kami"]
